--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,83 @@
 }
 
 * {
-  margin: 0;
-  padding:  0;
-  box-sizing: border-box;
+  background-color: #e3e0cf;
+  color: black;
 }
 
+.Header .ToggleUser {
+  text-align: right;
+  font-size: small;
+  padding-top: 20px;
+  padding-right: 20px;
+}
 
+li {
+  list-style-type: none;
+}
 
+.section__topic {
+  display: grid;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  gap: 25px;
+  width: fit-content;
+  margin: 30px auto 40px auto;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.sorting {
+  margin-bottom: 20px;
+  text-align: right;
+  margin-right: 15px;
+}
+
+/* Each news card on home page */
+.article_card {
+  border-style: outset;
+  padding: auto;
+  margin: 10px;
+}
+
+.article_card_vote {
+  font-size: small;
+}
+
+/* Single article page */
+
+.article_page {
+  text-align: center;
+  padding: 15px;
+}
+
+.article_page_body {
+  font-size: larger;
+}
+
+.article_page_author {
+  font-size: medium;
+  margin: 20px;
+}
+
+.comments {
+  text-align: justify;
+  font-size: smaller;
+  border-style: solid;
+  padding: 12px;
+  margin: 15px 0;
+}
+
+.comment-button {
+  border-radius: 20px;
+  width: fit-content;
+  margin: 7px auto;
+}
+
+.comment-box {
+  border-radius: 20px;
+
+  padding: 20px;
+  width: 200px;
+  height: 20px;
+}
